--- a/index.html
+++ b/index.html
@@ -53,4 +53,31 @@
       -> .vue라는 파일에 template, script, style 3개의 태그를 이용하여 컴포넌트를 구성한다.
       -> .vue파일은 어차피 브라우저가 못읽기 때문에 읽을 수 있도록 컴파일이 필요하다.
           그것을 처리해주는것이 Vite( 과거에는 Vue CLI)
+
+    
+    ● filter함수 : Arrays.filter()
+       -> 배열의 각 요소를 순회하면서 주어진 조건에 맞는 요소만을 모아서
+          새로운 배열을 만들어내는 함수
+
+    splice가 비슷한데 둘 중 어느것이 더 좋은가?
+    splice : 빠르고 메모리 효율상으로 우수하다.
+    filter : 원본 유지, 특히나 객체 배열에서 조건별로 뽑아낼 때 유리하다.
+
+    선택기준
+    값이 단순 배열일수록 splice가 유리, 성능이 중시되는 상황일수록 splice가 유리
+    객체타입( key:value)거나 원본의 배열을 유지하고 싶다면 filter를 사용
+    객체타입 ex)
+    const todos = [
+        { id: 1, text: '할일 1' },
+        { id: 2, text: '할일 2' },
+        { id: 3, text: '할일 3' }
+    ]
+
+    ● refs : 배열을 반응형으로 변경( HTMLCollection 화)
+    ● scoped : css 범위 조정
+       -> css의 범위가 해당 컴포넌트를 벗어나지 못하도록 처리할 때 사용하는 키워드
+       -> react, vue에서 자주 사용한다.( 컴포넌트 단위의 약점은 css가 겹치기 쉽다.)
+
+    ● .trim()
+       -> 입력값이 비어있는지 확인하는 메서드
 -->
