--- a/index.html
+++ b/index.html
@@ -177,13 +177,84 @@
             const api = await fetch('주소')
          }
 
-   vue에서도 ajax같은 비동기 전송방식을 지원하는 라이브러리도 있다.
-         -> vue resource, axios
+   vue에서도 ajax같은 비동기 전송방식을 지원하는 라이브 러리도 있음.
+         - vue resource, axios
+            // fetch는 기본적으로 promise 기반의 메서드이기때문에
+            // 리턴타입 또한 프로미스타입.
+            //  fetch() 메서드가 제공하는 첫번째 리턴은
+            // Http 요청이 전송되었음을 의미하는 객체일뿐.
+            // 즉 요청만 받아온 경우는 보류상태...
 
 
    ● fetch()
    fetch는 기본적으로 promise 기반의 메서드이기 때문에 리턴타입 또한 프로미스타입
    fetch() 메서드가 제공하는 첫번째 리턴은 Http 요청이 전송되었음을 의미하는 객체일뿐
    즉, 요청만 받아온 경우는 보류상태
+
+
+   ● vue 라우팅 : express의 라우터와 거의 유사
+         - 뷰에서 라우팅 기능을 제공해주는 라이브러리
+         (브라우저가 새로고침없이 뷰로 만든 페이지간 자유로운 이동을 지원)
+
+   ● vue 라이프 사이클
+         - 컴포넌트가 생성 - 업데이트 - 제거되는 과정 자체를 관리하는 메서드
+         - Creation, Mounting, Upadtiong, Destruction
+         - 크게 4가지 상태로 구분되면서 인스턴스에 주기별로 행동을 제어한다.
+
+      ● Hook : 컴포넌트의 라이프사이클에서 특정단계에 끼어들 수 있는 메서드
+         - Vue에 경우는 라이프사이클별로 단계마다 제어할 수 있도록 메서드를 준비해둔다.
+
+      ● 그렇다면 라이프사이클을 이용했을 때의 장점은?
+         - 상태별로 메서드가 정해져있기 때문에 네이밍 고민이 필요없다.
+         - 즉, 어느 개발자나 똑같은 상태별 처리가 가능하기 때문에 유지보수성 또한 좋아진다.
+
+      1. beforeCreate : 구성요소 초기화 전에 실행되는 메서드
+         - Vue 인스턴스가 구성요소의 데이터, 계산된 속성, 메서드 및 이벤트 리스너를 설정하기 전
+         주의사항 : 
+            - DOM요소에 엑세스 불가
+            - 그 외에 객체 생성 이전 이벤트다 보니 객체 생성이후 이벤트들에는 접근 불가
+            - 글로벌 이벤트 리스너 설정시 사용
+
+      2. ★ created : DOM에 접근 가능한 초기 데이터 값 설정시 사용하는 메서드
+
+      3. beforeMount : 초기 렌더링 직전에 실행
+
+      4. ★ mounted : 컴포넌트 자체가 DOM에 추가되는 단계
+            - DOM에 컴포넌트가 마운트 된 후 실행
+
+      5. beforeUpdate : 데이터가 변경될때마다 호출되지만 업데이트가 화면에 렌더링 되기 전에 호출
+            - 무한 루프에 빠지기 쉬운 메서드( 훅)이다.
+      
+      6. ★ updated : 업데이트가 화면에 렌더링 된 후 호출
+            - 컴포넌트의 반응형 데이터가 변경되어 재렌더링이 발생하는 단계
+         - beforeUpdate와 updated의 실행주기 차이는 화면에 렌더링 되기 전이냐 후냐 차이라고 보면된다.
+         - 공통점은 어떤 이벤트가 수행됐을 때 실행되는 공통점이 있다.
+
+      7. ★ beforeUnmount
+      8. ★ unmounted
+
+      9. errorCaptured : 오류 발생 시 호출되는 메서드
+
+      10. renderTracked : vue3에 출시된 메서드( 훅)
+            - 컴포넌트의 렌더링 과정을 추적하고 최적화 하는데 도움주는 훅
+            - beforeUpdate, updated와 같이 연계되서 사용,
+            - 성능에 영향을 주기 때문에 개발과정에서만 사용하고 운영과정에서는 제외할 것
+
+      11. renderTriggered : 렌더링 과정이 완료된 후 실행되는 훅
+            - 컴포넌트 렌더링 후에 필요한 작업을 수행하거나 렌더링 결과를 확인할 수 있다.
+
+      12. activeated : mounted와 비슷하다.
+            - 보관하고 있는 구성요소가 활성화될 시 호출된다.
+
+      13. deactivated : 보관하고 있는 구성요소가 비활성화 될 시 호출
+
+      14. severPreFetch : SSR 환경에서 사용하는 비동기 함수
+            - 라우팅과 관련되어 있는 함수
+
+
+
+      ● Creation( 생성) 단계
+         - 컴포넌트가 DOM에 추가되기 전 실행
+         - 서버사이드 렌더링에서도 실행되는 단계( 유일한 훅)
 
 -->
