--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app"></div>
-    <div id="destination"></div>
+    <!-- <div id="destination"></div> -->
     <script type="module" src="/src/main.js"></script>
 </body>
 
