250122 vue animation 공부

--- a/index.html
+++ b/index.html
@@ -257,4 +257,13 @@
          - 컴포넌트가 DOM에 추가되기 전 실행
          - 서버사이드 렌더링에서도 실행되는 단계( 유일한 훅)
 
+
+      ● Vue와 애니메이션
+         - 기본적으로 기존에 했던 CSS, JS와의 차이점을 이해하는것이 중요하다.
+         - Vue에서는 어떤식으로 이벤트를 관리하는가를 이해하는것이 그 다음 순서
+         - vue 기준으로 맞춰서 애니메이션 이벤트를 구현하는것이기 때문에
+           vue의 애니메이션과 관련된 내용들을 확인 후 구조의 이해가 필요하다.
+         - <Transition> 컴포넌트를 통해 이벤트 영역을 지정
+         - <TransitionGroup> 컴포넌트를 통해 생성된 요소들에게 개별적인 애니메이션을 제공
+      
 -->
